--- a/program_synthesis.ipynb
+++ b/program_synthesis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><div style = \"float: left;\"><span>5×8 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">V1</th><th style = \"text-align: left;\">V2</th><th style = \"text-align: left;\">V3</th><th style = \"text-align: left;\">V4</th><th style = \"text-align: left;\">V5</th><th style = \"text-align: left;\">V6</th><th style = \"text-align: left;\">V7</th><th style = \"text-align: left;\">Class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">11.49</td><td style = \"text-align: right;\">13.22</td><td style = \"text-align: right;\">0.8263</td><td style = \"text-align: right;\">5.304</td><td style = \"text-align: right;\">2.695</td><td style = \"text-align: right;\">5.388</td><td style = \"text-align: right;\">5.31</td><td style = \"text-align: left;\">3</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">12.02</td><td style = \"text-align: right;\">13.33</td><td style = \"text-align: right;\">0.8503</td><td style = \"text-align: right;\">5.35</td><td style = \"text-align: right;\">2.81</td><td style = \"text-align: right;\">4.271</td><td style = \"text-align: right;\">5.308</td><td style = \"text-align: left;\">3</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">19.13</td><td style = \"text-align: right;\">16.31</td><td style = \"text-align: right;\">0.9035</td><td style = \"text-align: right;\">6.183</td><td style = \"text-align: right;\">3.902</td><td style = \"text-align: right;\">2.109</td><td style = \"text-align: right;\">5.924</td><td style = \"text-align: left;\">2</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">14.43</td><td style = \"text-align: right;\">14.4</td><td style = \"text-align: right;\">0.8751</td><td style = \"text-align: right;\">5.585</td><td style = \"text-align: right;\">3.272</td><td style = \"text-align: right;\">3.975</td><td style = \"text-align: right;\">5.144</td><td style = \"text-align: left;\">1</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">12.19</td><td style = \"text-align: right;\">13.2</td><td style = \"text-align: right;\">0.8783</td><td style = \"text-align: right;\">5.137</td><td style = \"text-align: right;\">2.981</td><td style = \"text-align: right;\">3.631</td><td style = \"text-align: right;\">4.87</td><td style = \"text-align: left;\">3</td></tr></tbody></table></div>"
+       "<div><div style = \"float: left;\"><span>5×8 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">V1</th><th style = \"text-align: left;\">V2</th><th style = \"text-align: left;\">V3</th><th style = \"text-align: left;\">V4</th><th style = \"text-align: left;\">V5</th><th style = \"text-align: left;\">V6</th><th style = \"text-align: left;\">V7</th><th style = \"text-align: left;\">Class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">19.38</td><td style = \"text-align: right;\">16.72</td><td style = \"text-align: right;\">0.8716</td><td style = \"text-align: right;\">6.303</td><td style = \"text-align: right;\">3.791</td><td style = \"text-align: right;\">3.678</td><td style = \"text-align: right;\">5.965</td><td style = \"text-align: left;\">2</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">16.82</td><td style = \"text-align: right;\">15.51</td><td style = \"text-align: right;\">0.8786</td><td style = \"text-align: right;\">6.017</td><td style = \"text-align: right;\">3.486</td><td style = \"text-align: right;\">4.004</td><td style = \"text-align: right;\">5.841</td><td style = \"text-align: left;\">2</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">11.23</td><td style = \"text-align: right;\">12.82</td><td style = \"text-align: right;\">0.8594</td><td style = \"text-align: right;\">5.089</td><td style = \"text-align: right;\">2.821</td><td style = \"text-align: right;\">7.524</td><td style = \"text-align: right;\">4.957</td><td style = \"text-align: left;\">3</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">12.37</td><td style = \"text-align: right;\">13.47</td><td style = \"text-align: right;\">0.8567</td><td style = \"text-align: right;\">5.204</td><td style = \"text-align: right;\">2.96</td><td style = \"text-align: right;\">3.919</td><td style = \"text-align: right;\">5.001</td><td style = \"text-align: left;\">3</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">12.55</td><td style = \"text-align: right;\">13.57</td><td style = \"text-align: right;\">0.8558</td><td style = \"text-align: right;\">5.333</td><td style = \"text-align: right;\">2.968</td><td style = \"text-align: right;\">4.419</td><td style = \"text-align: right;\">5.176</td><td style = \"text-align: left;\">3</td></tr></tbody></table></div>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|cccccccc}\n",
@@ -164,11 +164,11 @@
        "\t\\hline\n",
        "\t& Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Cat…\\\\\n",
        "\t\\hline\n",
-       "\t1 & 11.49 & 13.22 & 0.8263 & 5.304 & 2.695 & 5.388 & 5.31 & 3 \\\\\n",
-       "\t2 & 12.02 & 13.33 & 0.8503 & 5.35 & 2.81 & 4.271 & 5.308 & 3 \\\\\n",
-       "\t3 & 19.13 & 16.31 & 0.9035 & 6.183 & 3.902 & 2.109 & 5.924 & 2 \\\\\n",
-       "\t4 & 14.43 & 14.4 & 0.8751 & 5.585 & 3.272 & 3.975 & 5.144 & 1 \\\\\n",
-       "\t5 & 12.19 & 13.2 & 0.8783 & 5.137 & 2.981 & 3.631 & 4.87 & 3 \\\\\n",
+       "\t1 & 19.38 & 16.72 & 0.8716 & 6.303 & 3.791 & 3.678 & 5.965 & 2 \\\\\n",
+       "\t2 & 16.82 & 15.51 & 0.8786 & 6.017 & 3.486 & 4.004 & 5.841 & 2 \\\\\n",
+       "\t3 & 11.23 & 12.82 & 0.8594 & 5.089 & 2.821 & 7.524 & 4.957 & 3 \\\\\n",
+       "\t4 & 12.37 & 13.47 & 0.8567 & 5.204 & 2.96 & 3.919 & 5.001 & 3 \\\\\n",
+       "\t5 & 12.55 & 13.57 & 0.8558 & 5.333 & 2.968 & 4.419 & 5.176 & 3 \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -176,11 +176,11 @@
        "\u001b[1m Row \u001b[0m│\u001b[1m V1      \u001b[0m\u001b[1m V2      \u001b[0m\u001b[1m V3      \u001b[0m\u001b[1m V4      \u001b[0m\u001b[1m V5      \u001b[0m\u001b[1m V6      \u001b[0m\u001b[1m V7      \u001b[0m\u001b[1m Class \u001b[0m\n",
        "     │\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Cat…  \u001b[0m\n",
        "─────┼──────────────────────────────────────────────────────────────────────\n",
-       "   1 │   11.49    13.22   0.8263    5.304    2.695    5.388    5.31   3\n",
-       "   2 │   12.02    13.33   0.8503    5.35     2.81     4.271    5.308  3\n",
-       "   3 │   19.13    16.31   0.9035    6.183    3.902    2.109    5.924  2\n",
-       "   4 │   14.43    14.4    0.8751    5.585    3.272    3.975    5.144  1\n",
-       "   5 │   12.19    13.2    0.8783    5.137    2.981    3.631    4.87   3"
+       "   1 │   19.38    16.72   0.8716    6.303    3.791    3.678    5.965  2\n",
+       "   2 │   16.82    15.51   0.8786    6.017    3.486    4.004    5.841  2\n",
+       "   3 │   11.23    12.82   0.8594    5.089    2.821    7.524    4.957  3\n",
+       "   4 │   12.37    13.47   0.8567    5.204    2.96     3.919    5.001  3\n",
+       "   5 │   12.55    13.57   0.8558    5.333    2.968    4.419    5.176  3"
       ]
      },
      "metadata": {},
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -414,16 +414,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pipeline([(\"seq\", Pipeline([(\"PolynomialFeatures\", PolynomialFeatures()), (\"MaxAbsScaler\", MaxAbsScaler())])), (\"DecisionTree\", DecisionTreeClassifier())])\n",
-      "2{5{3{13}3{10}}18}\n",
-      "405"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: ContextFreeEnumerator not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: ContextFreeEnumerator not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getproperty(x::Module, f::Symbol)\n",
+      "   @ Base .\\Base.jl:31\n",
+      " [2] top-level scope\n",
+      "   @ c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:2"
      ]
     }
    ],
@@ -449,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -564,44 +569,20 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration: 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration: 2\n",
-      "iteration: 3\n",
-      "iteration: 4\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iteration: 5\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "AssertionError: The depth of new random = 45 but remaning depth =  6. \n            Expreesion was Pipeline([(\"seq\", Pipeline([(\"PolynomialFeatures\", PolynomialFeatures()), (\"MaxAbsScaler\", MaxAbsScaler())])), (\"DecisionTree\", DecisionTreeClassifier())])",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching constructNeighbourhoodRuleSubset(::Main.Herb.HerbGrammar.RuleNode, ::Main.Herb.HerbGrammar.ContextFreeGrammar)\nClosest candidates are:\n  constructNeighbourhoodRuleSubset(!Matched::Main.Herb.HerbGrammar.RuleNode, ::Main.Herb.HerbGrammar.ContextFreeGrammar) at c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbSearch.jl\\src\\stocastic_functions\\neighbourhood.jl:29",
      "output_type": "error",
      "traceback": [
-      "AssertionError: The depth of new random = 45 but remaning depth =  6. \n",
-      "            Expreesion was Pipeline([(\"seq\", Pipeline([(\"PolynomialFeatures\", PolynomialFeatures()), (\"MaxAbsScaler\", MaxAbsScaler())])), (\"DecisionTree\", DecisionTreeClassifier())])\n",
+      "MethodError: no method matching constructNeighbourhoodRuleSubset(::Main.Herb.HerbGrammar.RuleNode, ::Main.Herb.HerbGrammar.ContextFreeGrammar)\n",
+      "Closest candidates are:\n",
+      "  constructNeighbourhoodRuleSubset(!Matched::Main.Herb.HerbGrammar.RuleNode, ::Main.Herb.HerbGrammar.ContextFreeGrammar) at c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbSearch.jl\\src\\stocastic_functions\\neighbourhood.jl:29\n",
       "\n",
       "Stacktrace:\n",
-      " [1] random_fill_propose(current_program::Main.Herb.HerbGrammar.RuleNode, neighbourhood_node_loc::Main.Herb.HerbGrammar.NodeLoc, grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, max_depth::Int64, dict::Dict{String, Vector{Any}})\n",
-      "   @ Main.Herb.HerbSearch c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\Herb.jl\\HerbSearch.jl\\src\\stocastic_functions\\propose.jl:38\n",
-      " [2] one_iter_mh(current_program::Main.Herb.HerbGrammar.RuleNode, grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64, t_start::DateTime, max_time::Millisecond, current_program_accuracy::Float64)\n",
-      "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:7\n",
-      " [3] mh(grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64)\n",
+      " [1] one_iter_mh(current_program::Main.Herb.HerbGrammar.RuleNode, grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64, t_start::DateTime, max_time::Millisecond, current_program_accuracy::Float64)\n",
+      "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:6\n",
+      " [2] mh(grammar::Main.Herb.HerbGrammar.ContextFreeGrammar, enumeration_depth::Int64)\n",
       "   @ Main c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:16\n",
-      " [4] top-level scope\n",
+      " [3] top-level scope\n",
       "   @ c:\\Users\\aukes\\Documents\\Studie\\Y3\\BEP\\research_project\\program_synthesis.ipynb:1"
      ]
     }
