First implementation of the genetic algiorithm

--- a/grammar.ipynb
+++ b/grammar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,14 +29,24 @@
    "source": [
     "using Revise\n",
     "\n",
-    "include(\"../../Herb.jl/src/Herb.jl\")"
+    "include(\"lib/Herb.jl/src/Herb.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PyObject <class 'sklearn.svm._classes.LinearSVC'>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "@sk_import decomposition: (PCA)\n",
     "@sk_import preprocessing: (StandardScaler, RobustScaler, MinMaxScaler, MaxAbsScaler, Binarizer, PolynomialFeatures)\n",
@@ -90,35 +100,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1: START = EST\n",
-       "2: START = sequence(PRE, CLASSIF)\n",
+       "1: START = Pipeline([CLASSIF])\n",
+       "2: START = Pipeline([PRE, CLASSIF])\n",
        "3: PRE = PREPROC\n",
        "4: PRE = FSELECT\n",
-       "5: PRE = sequence(PRE, PRE)\n",
-       "6: PRE = parallel(PRE, PRE)\n",
-       "7: PREPROC = (\"StandardScaler\", StandardScaler)\n",
-       "8: PREPROC = (\"RobustScaler\", RobustScaler)\n",
-       "9: PREPROC = (\"MinMaxScaler\", MinMaxScaler)\n",
-       "10: PREPROC = (\"MaxAbsScaler\", MaxAbsScaler)\n",
-       "11: PREPROC = (\"RandomizedPCA\", RandomizedPCA)\n",
-       "12: PREPROC = (\"Binarizer\", Binarizer)\n",
-       "13: PREPROC = (\"PolynomialFeatures\", PolynomialFeatures)\n",
-       "14: CLASSIF = (\"DecisionTree\", DecisionTree)\n",
-       "15: CLASSIF = (\"RandomForest\", RandomForest)\n",
-       "16: CLASSIF = (\"eXtreme Gradient Boosting Classifier\", eXtremeGradientBoostingClassifier)\n",
-       "17: CLASSIF = (\"LogisticRegression\", LogisticRegression)\n",
-       "18: CLASSIF = (\"KNearestNeighborClassifier\", KNearestNeighborClassifier)\n",
-       "19: FSELECT = (\"VarianceThreshold\", VarianceThreshold)\n",
-       "20: FSELECT = (\"SelectKBest\", SelectKBest)\n",
-       "21: FSELECT = (\"SelectPercentile\", SelectPercentile)\n",
-       "22: FSELECT = (\"SelectFwe\", SelectFwe)\n",
-       "23: FSELECT = (\"Recursive Feature Elimination (RFE)\", RecursiveFeatureElimination)\n"
+       "5: PRE = (\"seq\", Pipeline([PRE, PRE]))\n",
+       "6: PRE = (\"par\", FeatureUnion([PRE, PRE]))\n",
+       "7: PREPROC = (\"StandardScaler\", StandardScaler())\n",
+       "8: PREPROC = (\"RobustScaler\", RobustScaler())\n",
+       "9: PREPROC = (\"MinMaxScaler\", MinMaxScaler())\n",
+       "10: PREPROC = (\"MaxAbsScaler\", MaxAbsScaler())\n",
+       "11: PREPROC = (\"PCA\", PCA())\n",
+       "12: PREPROC = (\"Binarizer\", Binarizer())\n",
+       "13: PREPROC = (\"PolynomialFeatures\", PolynomialFeatures())\n",
+       "14: FSELECT = (\"VarianceThreshold\", VarianceThreshold())\n",
+       "15: FSELECT = (\"SelectKBest\", SelectKBest())\n",
+       "16: FSELECT = (\"SelectPercentile\", SelectPercentile())\n",
+       "17: FSELECT = (\"SelectFwe\", SelectFwe())\n",
+       "18: FSELECT = (\"Recursive Feature Elimination\", RFE(LinearSVC()))\n",
+       "19: CLASSIF = (\"DecisionTree\", DecisionTreeClassifier())\n",
+       "20: CLASSIF = (\"RandomForest\", RandomForestClassifier())\n",
+       "21: CLASSIF = (\"Gradient Boosting Classifier\", GradientBoostingClassifier())\n",
+       "22: CLASSIF = (\"LogisticRegression\", LogisticRegression())\n",
+       "23: CLASSIF = (\"NearestNeighborClassifier\", NearestNeighbors())\n"
       ]
      },
      "metadata": {},
@@ -164,14 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FeatureUnion([(\"MinMaxScaler\", MinMaxScaler()), (\"PolynomialFeatures\", PolynomialFeatures())])\n"
+     ]
+    }
+   ],
    "source": [
-    "cfe = Herb.HerbSearch.ContextFreeEnumerator(g, 3, :START)\n",
-    "for rule in cfe\n",
-    "    println(Herb.HerbSearch.rulenode2expr(rule, g))\n",
-    "end"
+    "cfe = Herb.HerbSearch.ContextFreeEnumerator(g, 5, :START)\n",
+    "rule = collect(cfe)[1000]\n",
+    "println(\"$(typeof(Herb.HerbSearch.rulenode2expr(rule, g).args[2].args[1].args[2].args[2].args[2].args[2]))\")\n",
+    "# println(\"$(Herb.HerbSearch.rulenode2expr(rule, g).args[2].args[2].args)\")\n"
    ]
   },
   {
@@ -190,15 +208,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.3",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.3"
+   "version": "1.8.5"
   },
   "orig_nbformat": 4
  },
