edited the algorithm to be run more easily on its own

--- a/program_synthesis.ipynb
+++ b/program_synthesis.ipynb
@@ -128,7 +128,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div style = \"float: left;\"><span>5×9 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">preg</th><th style = \"text-align: left;\">plas</th><th style = \"text-align: left;\">pres</th><th style = \"text-align: left;\">skin</th><th style = \"text-align: left;\">insu</th><th style = \"text-align: left;\">mass</th><th style = \"text-align: left;\">pedi</th><th style = \"text-align: left;\">age</th><th style = \"text-align: left;\">class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">57.0</td><td style = \"text-align: right;\">60.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">21.7</td><td style = \"text-align: right;\">0.735</td><td style = \"text-align: right;\">67.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">1.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">68.0</td><td style = \"text-align: right;\">35.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">32.0</td><td style = \"text-align: right;\">0.389</td><td style = \"text-align: right;\">22.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">93.0</td><td style = \"text-align: right;\">60.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">35.3</td><td style = \"text-align: right;\">0.263</td><td style = \"text-align: right;\">25.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">9.0</td><td style = \"text-align: right;\">184.0</td><td style = \"text-align: right;\">85.0</td><td style = \"text-align: right;\">15.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">30.0</td><td style = \"text-align: right;\">1.213</td><td style = \"text-align: right;\">49.0</td><td style = \"text-align: left;\">tested_positive</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">2.0</td><td style = \"text-align: right;\">124.0</td><td style = \"text-align: right;\">68.0</td><td style = \"text-align: right;\">28.0</td><td style = \"text-align: right;\">205.0</td><td style = \"text-align: right;\">32.9</td><td style = \"text-align: right;\">0.875</td><td style = \"text-align: right;\">30.0</td><td style = \"text-align: left;\">tested_positive</td></tr></tbody></table></div>"
+       "<div><div style = \"float: left;\"><span>5×9 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">preg</th><th style = \"text-align: left;\">plas</th><th style = \"text-align: left;\">pres</th><th style = \"text-align: left;\">skin</th><th style = \"text-align: left;\">insu</th><th style = \"text-align: left;\">mass</th><th style = \"text-align: left;\">pedi</th><th style = \"text-align: left;\">age</th><th style = \"text-align: left;\">class</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"Float64\" style = \"text-align: left;\">Float64</th><th title = \"CategoricalArrays.CategoricalValue{String, UInt32}\" style = \"text-align: left;\">Cat…</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">2.0</td><td style = \"text-align: right;\">121.0</td><td style = \"text-align: right;\">70.0</td><td style = \"text-align: right;\">32.0</td><td style = \"text-align: right;\">95.0</td><td style = \"text-align: right;\">39.1</td><td style = \"text-align: right;\">0.886</td><td style = \"text-align: right;\">23.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">5.0</td><td style = \"text-align: right;\">111.0</td><td style = \"text-align: right;\">72.0</td><td style = \"text-align: right;\">28.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">23.9</td><td style = \"text-align: right;\">0.407</td><td style = \"text-align: right;\">27.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">2.0</td><td style = \"text-align: right;\">122.0</td><td style = \"text-align: right;\">60.0</td><td style = \"text-align: right;\">18.0</td><td style = \"text-align: right;\">106.0</td><td style = \"text-align: right;\">29.8</td><td style = \"text-align: right;\">0.717</td><td style = \"text-align: right;\">22.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">2.0</td><td style = \"text-align: right;\">75.0</td><td style = \"text-align: right;\">64.0</td><td style = \"text-align: right;\">24.0</td><td style = \"text-align: right;\">55.0</td><td style = \"text-align: right;\">29.7</td><td style = \"text-align: right;\">0.37</td><td style = \"text-align: right;\">33.0</td><td style = \"text-align: left;\">tested_negative</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">10.0</td><td style = \"text-align: right;\">139.0</td><td style = \"text-align: right;\">80.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">0.0</td><td style = \"text-align: right;\">27.1</td><td style = \"text-align: right;\">1.441</td><td style = \"text-align: right;\">57.0</td><td style = \"text-align: left;\">tested_negative</td></tr></tbody></table></div>"
       ],
       "text/latex": [
        "\\begin{tabular}{r|ccccccccc}\n",
@@ -136,11 +136,11 @@
        "\t\\hline\n",
        "\t& Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Float64 & Cat…\\\\\n",
        "\t\\hline\n",
-       "\t1 & 0.0 & 57.0 & 60.0 & 0.0 & 0.0 & 21.7 & 0.735 & 67.0 & tested\\_negative \\\\\n",
-       "\t2 & 1.0 & 0.0 & 68.0 & 35.0 & 0.0 & 32.0 & 0.389 & 22.0 & tested\\_negative \\\\\n",
-       "\t3 & 0.0 & 93.0 & 60.0 & 0.0 & 0.0 & 35.3 & 0.263 & 25.0 & tested\\_negative \\\\\n",
-       "\t4 & 9.0 & 184.0 & 85.0 & 15.0 & 0.0 & 30.0 & 1.213 & 49.0 & tested\\_positive \\\\\n",
-       "\t5 & 2.0 & 124.0 & 68.0 & 28.0 & 205.0 & 32.9 & 0.875 & 30.0 & tested\\_positive \\\\\n",
+       "\t1 & 2.0 & 121.0 & 70.0 & 32.0 & 95.0 & 39.1 & 0.886 & 23.0 & tested\\_negative \\\\\n",
+       "\t2 & 5.0 & 111.0 & 72.0 & 28.0 & 0.0 & 23.9 & 0.407 & 27.0 & tested\\_negative \\\\\n",
+       "\t3 & 2.0 & 122.0 & 60.0 & 18.0 & 106.0 & 29.8 & 0.717 & 22.0 & tested\\_negative \\\\\n",
+       "\t4 & 2.0 & 75.0 & 64.0 & 24.0 & 55.0 & 29.7 & 0.37 & 33.0 & tested\\_negative \\\\\n",
+       "\t5 & 10.0 & 139.0 & 80.0 & 0.0 & 0.0 & 27.1 & 1.441 & 57.0 & tested\\_negative \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/plain": [
@@ -148,11 +148,11 @@
        "\u001b[1m Row \u001b[0m│\u001b[1m preg    \u001b[0m\u001b[1m plas    \u001b[0m\u001b[1m pres    \u001b[0m\u001b[1m skin    \u001b[0m\u001b[1m insu    \u001b[0m\u001b[1m mass    \u001b[0m\u001b[1m pedi    \u001b[0m\u001b[1m age     \u001b[0m\u001b[1m\u001b[0m ⋯\n",
        "     │\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m Float64 \u001b[0m\u001b[90m\u001b[0m ⋯\n",
        "─────┼──────────────────────────────────────────────────────────────────────────\n",
-       "   1 │     0.0     57.0     60.0      0.0      0.0     21.7    0.735     67.0  ⋯\n",
-       "   2 │     1.0      0.0     68.0     35.0      0.0     32.0    0.389     22.0\n",
-       "   3 │     0.0     93.0     60.0      0.0      0.0     35.3    0.263     25.0\n",
-       "   4 │     9.0    184.0     85.0     15.0      0.0     30.0    1.213     49.0\n",
-       "   5 │     2.0    124.0     68.0     28.0    205.0     32.9    0.875     30.0  ⋯\n",
+       "   1 │     2.0    121.0     70.0     32.0     95.0     39.1    0.886     23.0  ⋯\n",
+       "   2 │     5.0    111.0     72.0     28.0      0.0     23.9    0.407     27.0\n",
+       "   3 │     2.0    122.0     60.0     18.0    106.0     29.8    0.717     22.0\n",
+       "   4 │     2.0     75.0     64.0     24.0     55.0     29.7    0.37      33.0\n",
+       "   5 │    10.0    139.0     80.0      0.0      0.0     27.1    1.441     57.0  ⋯\n",
        "\u001b[36m                                                                1 column omitted\u001b[0m"
       ]
      },
@@ -513,7 +513,7 @@
     {
      "data": {
       "text/plain": [
-       "0.33766233766233766"
+       "0.3116883116883117"
       ]
      },
      "metadata": {},
@@ -527,13 +527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1{21}, 0.7922077922077922)"
+       "(2{3{11}20}, 0.8181818181818182)"
       ]
      },
      "metadata": {},
@@ -584,7 +584,7 @@
     "end\n",
     "\n",
     "# Expands a chosen node by adding all configurations as child nodes an picking one at random.\n",
-    "function expand_node(node, grammar)\n",
+    "function expand_node(node, grammar, mem)\n",
     "    # Checks in memory if the rules have already been enumerated once to save time.\n",
     "    if mem[node.depth+1] == nothing\n",
     "        enumerator = Herb.HerbSearch.ContextFreeEnumerator(grammar, node.depth+1, :START)\n",
@@ -636,7 +636,12 @@
     "end\n",
     "\n",
     "# Perform Monte Carlo Tree Search\n",
-    "function mcts(root_state, max_iterations, grammar, c)\n",
+    "function mcts(max_iterations, grammar, c)\n",
+    "    # Initialize the memory array for the memoization of certain configuration.\n",
+    "    mem = []\n",
+    "    push!(mem, nothing)\n",
+    "    # Generate the root node.\n",
+    "    root_node = select_initial_state(grammar, 2, :START, mem)\n",
     "    best_pipeline_score = 0 \n",
     "    best_pipeline_conf = nothing\n",
     "    for _ in 1:max_iterations\n",
@@ -647,7 +652,7 @@
     "        end\n",
     "        # Expansion\n",
     "        if node.visits > 0\n",
-    "            node = expand_node(node, grammar)\n",
+    "            node = expand_node(node, grammar, mem)\n",
     "        end\n",
     "\n",
     "        # Simulation\n",
@@ -664,7 +669,7 @@
     "end\n",
     "\n",
     "# Creates an inital state to use as a starting point for the algorithm. \n",
-    "function select_initial_state(grammar, max_depth, start_symbol)\n",
+    "function select_initial_state(grammar, max_depth, start_symbol, mem)\n",
     "    initial_state = TreeNode(:EMPTY, 1, nothing)  # Create a root node with an empty symbol\n",
     "    # Expand the root node by adding the first layer of options\n",
     "    \n",
@@ -685,14 +690,9 @@
     "    return initial_state\n",
     "end\n",
     "\n",
-    "# Initialize the memory array for the memoization of certain configuration.\n",
-    "mem = []\n",
-    "push!(mem, nothing)\n",
-    "# Generate the root node.\n",
-    "root_node = select_initial_state(grammar, 2, :START)\n",
     "\n",
     "# Perform Monte Carlo Tree Search!\n",
-    "best_pipeline = mcts(root_node, 6, grammar, 1.42)\n"
+    "best_pipeline = mcts(100, grammar, 1.42)"
    ]
   },
   {
@@ -703,7 +703,7 @@
     {
      "data": {
       "text/plain": [
-       "expand_node (generic function with 1 method)"
+       "expand_node (generic function with 2 methods)"
       ]
      },
      "metadata": {},
